--- a/index.html
+++ b/index.html
@@ -9,4 +9,5 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
+  <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey="></script>
 </html>
