--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body style="margin: 0;">
+  <body style="margin: 0">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
-  <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=9235a57b2cfd81772c8985c0c756845b"></script>
+  <script
+    type="text/javascript"
+    src="//dapi.kakao.com/v2/maps/sdk.js?appkey=9235a57b2cfd81772c8985c0c756845b&libraries=services,clusterer"
+  ></script>
 </html>
